testData/diagnostics/integer_overflow_int_max.diag.txt
testData/diagnostics/integer_overflow_int_max.nut line = (1) column = (8) : error: integer constant overflow
println(9223372036854775808)
        ^------------------

